<resources>
    <string name="app_name" translatable="false">PM Station</string>
    <string name="pm1" translatable="false">PM1.0</string>
    <string name="pm25" translatable="false">PM2.5</string>
    <string name="pm10" translatable="false">PM10</string>
    <string name="temp" translatable="false">Temp.</string>
    <string name="rh" translatable="false">RH</string>
    <string name="hcho" translatable="false">HCHO</string>
    <string name="time">Time</string>
    <string name="unit" translatable="false">µg/m³</string>
    <string name="temp_unit" translatable="false">℃</string>
    <string name="percent" translatable="false">%</string>
    <string name="status_connected">connected</string>
    <string name="status_disconnected">disconnected</string>
    <string name="status_permission_denied">permission denied</string>
    <string name="settings">Settings</string>
    <string name="pref_general">General</string>
    <string name="pref_sampling_interval_default" translatable="false">1500</string>
    <string name="pref_main_value_default" translatable="false">1</string>
    <string name="pref_sampling_interval">Sampling interval</string>
    <string name="pref_main_value">Main value</string>
    <string name="about">About</string>
    <string name="version_name" translatable="false">1.1.3</string>
    <string name="authors">Authors</string>
    <string name="rg" translatable="false"><font color='#008295'><u>Radosław Gabiga</u></font></string>
    <string name="rj" translatable="false"><font color='#008295'><u>Radosław Jaros</u></font></string>
    <string name="ps" translatable="false"><font color='#008295'><u>Piotr Skowronek</u></font></string>
    <string name="copyright" translatable="false">Copyright © 2017 – 2018</string>
    <string name="project">Project</string>
    <string name="project_desc">The project details and the required equipement can be found&#160;<font color='#008295'><u>here</u></font></string>
    <string name="license">License</string>
    <string name="lgpl3">This application is licensed under the terms of&#160;<font color='#008295'><u>License GPL-3.0</u></font></string>
    <string name="third_party"><font color='#008295'><u>Third party notices</u></font></string>
    <string name="android_logo">Android logo</string>
    <string name="android_logo_notice">The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
    <string name="plug_icons">Plug icons</string>
    <string name="plug_icons_notice" translatable="false">Plug by Creative Stall from the Noun Project</string>
    <string name="plug_icons_notice_url_1" translatable="false"><font color='#008295'><u>https://thenounproject.com/term/plug/380956/</u></font></string>
    <string name="plug_icons_notice_url_2" translatable="false"><font color='#008295'><u>https://thenounproject.com/term/plug/380958/</u></font></string>
    <string name="background">Background</string>
    <string name="background_notice" translatable="false">AIR POLLUTION by 2HAPPY from stockvault</string>
    <string name="background_notice_url" translatable="false"><font color='#008295'><u>http://www.stockvault.net/photo/124893/air-pollution</u></font></string>
    <string name="pm_25_norm">PM2.5 norm</string>
    <string name="pm_10_norm">PM10 norm</string>
    <string name="norm_summary">Maximum allowed concentration level</string>
    <string name="norm_message">Set the value which will be a base for percentage calculation</string>
    <string name="invalid_number">Not a valid integer, try again</string>
    <string name="invalid_mac">Not a valid MAC address, try again</string>
    <string name="main_value_summary">Value displayed as the bigger number on main screen</string>
    <string name="policy">Privacy Policy</string>
    <string name="policy_desc">The app privacy policy can be found on the&#160;<font color='#008295'><u>project\'s page</u></font></string>
    <string name="device_identified">PlanTower model recognized: %1$s</string>
    <string name="device_unidentified">PlanTower model not recognized</string>
</resources>
