<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_general">

        <ListPreference
            android:key="sampling_interval"
            android:title="@string/pref_sampling_interval"
            android:defaultValue="@string/pref_sampling_interval_default"
            android:entries="@array/interval_labels"
            android:entryValues="@array/interval_values"/>
        <ListPreference
            android:key="main_value"
            android:title="@string/pref_main_value"
            android:defaultValue="@string/pref_main_value_default"
            android:entries="@array/main_value_labels"
            android:entryValues="@array/main_value_values"/>
    </PreferenceCategory>
</PreferenceScreen>
