<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:showIn="@layout/fragment_about">
    <TextView
            android:text="@string/authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
    <TextView
            android:id="@+id/author_rg"
            android:text="@string/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:id="@+id/author_rj"
            android:text="@string/rj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:id="@+id/author_ps"
            android:text="@string/ps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:text="@string/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
    <TextView
            android:id="@+id/project_desc"
            android:text="@string/project_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
        android:text="@string/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/policy_desc"
        android:text="@string/policy_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
            android:text="@string/license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
    <TextView
            android:id="@+id/lgpl3"
            android:text="@string/lgpl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:id="@+id/third_party"
            android:text="@string/third_party"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>
</LinearLayout>
