<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="300dp"
            android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/android_logo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_logo_notice"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/plug_icons"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plug_icons_notice"/>
        <TextView
            android:id="@+id/plug_icons_notice_url_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plug_icons_notice_url_1"/>
        <TextView
            android:id="@+id/plug_icons_notice_url_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plug_icons_notice_url_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/background"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_notice"/>
        <TextView
            android:id="@+id/background_notice_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_notice_url"/>
    </LinearLayout>
</ScrollView>
